java 8, spigot 1.16.5